fix scrollbar in grid

--- a/public/style.css
+++ b/public/style.css
@@ -768,6 +768,7 @@ body:not(.light) #menu .button img{
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 300pt;
     flex-grow: 1;
     flex-shrink: 1;
 }
@@ -775,7 +776,6 @@ body:not(.light) #menu .button img{
 #layoutEditor .label_with_content .axis_label{
     width: 20pt;
     min-width: 20pt;
-    height: 100%;
     position: relative;
 }
 
